Play icon fix on ios

--- a/assets/css/wmb-mobile.css
+++ b/assets/css/wmb-mobile.css
@@ -272,12 +272,17 @@
 	    z-index: 1000;
 	    top: 50%;
 	    left: 50%;
-	    margin-top: -32px;
+	    margin-top: -10px;
 	    -webkit-transform: translate(-50%,-50%);
 	    transform: translate(-50%,-50%);
 	    -webkit-backface-visibility: hidden;
 	    cursor: pointer;
 	    text-shadow: 0 4px 7px black;
+	}
+
+	[data-device="mobile"] #alt-video-play,
+	[data-device="mobile"] #alt-video-pause{
+		display: none;
 	}
 
 }
